--- a/Assignments/00-StartHere/01-Colab_Intro.ipynb
+++ b/Assignments/00-StartHere/01-Colab_Intro.ipynb
@@ -2,13 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "ce84d463",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rugbyprof/3603-Programming-for-Data-Science/blob/main/Assignments/00-StartHere/01-Colab_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jonscales/jonscales-DataScience-2025/blob/main/Assignments/00-StartHere/01-Colab_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,12 +37,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "f7ca3562",
       "metadata": {
-        "id": "f7ca3562"
+        "id": "f7ca3562",
+        "outputId": "7e8c6759-bb74-4249-c871-2f6d1193fc95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Data Science World!\n"
+          ]
+        }
+      ],
       "source": [
         "# 👋 Try running this cell!\n",
         "print('Hello, Data Science World!')"
@@ -62,14 +73,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "aaf79c47",
       "metadata": {
-        "id": "aaf79c47"
+        "id": "aaf79c47",
+        "outputId": "ab20ddd6-40f8-44ca-97d8-b1f15959cdac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jon\n"
+          ]
+        }
+      ],
       "source": [
-        "print('Terry')"
+        "print('Jon')"
       ]
     },
     {
@@ -89,11 +112,15 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
