--- a/Completed/02-Working_with_Data/02-Tuples.ipynb
+++ b/Completed/02-Working_with_Data/02-Tuples.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rugbyprof/3603-Programming-for-Data-Science/blob/main/Completed/02-Working_with_Data/02-Tuples.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jonscales/jonscales-DataScience-2025/blob/main/Completed/02-Working_with_Data/02-Tuples.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +41,7 @@
       "id": "467cf803",
       "metadata": {
         "id": "467cf803",
-        "outputId": "183581a6-6cd9-4e14-aa0e-f803182e113d",
+        "outputId": "c6e66e26-e070-4616-ba9b-8261642116cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -67,7 +67,7 @@
       "id": "13b643c4",
       "metadata": {
         "id": "13b643c4",
-        "outputId": "8922e796-0708-4522-83b7-2f3960466831",
+        "outputId": "3fb96bf8-e4c8-4d32-a584-03bf1bd64d5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -90,12 +90,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "2c780aea",
       "metadata": {
-        "id": "2c780aea"
+        "id": "2c780aea",
+        "outputId": "91fb6db5-7683-42b5-ef03-67c5c18ba533",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x + y = 15\n"
+          ]
+        }
+      ],
       "source": [
         "# 🔁 Tuple Unpacking\n",
         "x, y = coords\n",
@@ -112,8 +124,45 @@
         "## 🚫 Tuples are immutable\n",
         "Try uncommenting the line below to see what happens:\n",
         "```python\n",
-        "# coords[0] = 100\n",
+        "coords[0] = 100\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# my birthday tuple\n",
+        "birthday = (10, 29, 1965)\n",
+        "m, d, y = birthday\n",
+        "longbd = (\"Oct\", 29, 1965)\n",
+        "mo, dy, yr = longbd\n",
+        "print(m)\n",
+        "print(d)\n",
+        "print(y)\n",
+        "print(\"I was born\", m,\"/\",d,\"/\",y)\n",
+        "print(\"Jon was born\", dy, mo, yr)"
+      ],
+      "metadata": {
+        "id": "q2utM_e_SehP",
+        "outputId": "c13c2f0b-1e18-4e5c-d4ee-4e62d7090e01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "q2utM_e_SehP",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "29\n",
+            "1965\n",
+            "I was born 10 / 29 / 1965\n",
+            "Jon was born 29 Oct 1965\n"
+          ]
+        }
       ]
     },
     {
@@ -129,14 +178,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "date = (5,5,5)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "PTuOP9DmzoCd"
+        "id": "_QYZwD9bSdxj"
       },
-      "id": "PTuOP9DmzoCd",
-      "execution_count": 3,
+      "id": "_QYZwD9bSdxj",
+      "execution_count": null,
       "outputs": []
     }
   ],
