--- a/Completed/03-Scalar_Types_and_Control_Flow/01-Scalar_Types.ipynb
+++ b/Completed/03-Scalar_Types_and_Control_Flow/01-Scalar_Types.ipynb
@@ -1,3 +1,5 @@
+{
+  "cells": [
     {
       "cell_type": "markdown",
       "id": "c224876d",
@@ -99,11 +101,11 @@
         "print(type(is_sane))"
       ],
       "metadata": {
-        "id": "Q8mjA4zaD4Ck",
-        "outputId": "cbaee34e-0422-412a-9a9d-3b293b9277aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q8mjA4zaD4Ck",
+        "outputId": "cbaee34e-0422-412a-9a9d-3b293b9277aa"
       },
       "id": "Q8mjA4zaD4Ck",
       "execution_count": 10,
@@ -186,11 +188,11 @@
         "print(3 == 3.0)"
       ],
       "metadata": {
-        "id": "DWlDdv97EjDu",
-        "outputId": "0a54124f-81dc-4577-89ae-420d36398bd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DWlDdv97EjDu",
+        "outputId": "0a54124f-81dc-4577-89ae-420d36398bd6"
       },
       "id": "DWlDdv97EjDu",
       "execution_count": 13,
