--- a/Completed/03-Scalar_Types_and_Control_Flow/01-Scalar_Types.ipynb
+++ b/Completed/03-Scalar_Types_and_Control_Flow/01-Scalar_Types.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jonscales/jonscales-DataScience-2025/blob/main/Completed/03-Scalar_Types_and_Control_Flow/01-Scalar_Types.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "c224876d",
       "metadata": {
         "id": "c224876d"
@@ -210,7 +220,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
