--- a/Completed/05-Foundations/02-markdown_and_formatting.ipynb
+++ b/Completed/05-Foundations/02-markdown_and_formatting.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jonscales/jonscales-DataScience-2025/blob/main/Completed/05-Foundations/02-markdown_and_formatting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "OkUE22dcDS4g"
       },
       "source": [
@@ -64,12 +74,12 @@
         "**Matplotlib**\n"
       ],
       "metadata": {
-        "id": "igSmfl-sDVCS",
-        "outputId": "890cbbfc-cbb2-4947-bf00-fd512bca9483",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
-        }
+        },
+        "id": "igSmfl-sDVCS",
+        "outputId": "890cbbfc-cbb2-4947-bf00-fd512bca9483"
       },
       "id": "igSmfl-sDVCS",
       "execution_count": 8,
@@ -146,12 +156,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "8CXGKmyfJHbR",
-        "outputId": "33eee31f-0f3c-4e4b-fbad-ad905a57db22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "id": "8CXGKmyfJHbR",
+        "outputId": "33eee31f-0f3c-4e4b-fbad-ad905a57db22"
       },
       "id": "8CXGKmyfJHbR",
       "execution_count": 21,
@@ -209,12 +219,12 @@
         "uploaded = files.upload()"
       ],
       "metadata": {
-        "id": "0grj_IlTO9nJ",
-        "outputId": "05d6d643-193f-4747-c23a-cf113771f086",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "id": "0grj_IlTO9nJ",
+        "outputId": "05d6d643-193f-4747-c23a-cf113771f086"
       },
       "id": "0grj_IlTO9nJ",
       "execution_count": 24,
@@ -438,12 +448,12 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "ChvAZJ3IM-AH",
-        "outputId": "0968fb54-1be3-43b3-b463-f897666c37e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 318
-        }
+        },
+        "id": "ChvAZJ3IM-AH",
+        "outputId": "0968fb54-1be3-43b3-b463-f897666c37e2"
       },
       "id": "ChvAZJ3IM-AH",
       "execution_count": 33,
@@ -524,12 +534,12 @@
         "</div>\n"
       ],
       "metadata": {
-        "id": "4VzTb2rmU-PR",
-        "outputId": "91a2ff92-7ff7-4062-af8c-1abce2aaa43c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 261
-        }
+        },
+        "id": "4VzTb2rmU-PR",
+        "outputId": "91a2ff92-7ff7-4062-af8c-1abce2aaa43c"
       },
       "id": "4VzTb2rmU-PR",
       "execution_count": 42,
@@ -603,11 +613,11 @@
         "print(cubes)\n"
       ],
       "metadata": {
-        "id": "S4sCwm0ojiQ5",
-        "outputId": "98b1efe3-da62-4624-a7b3-32ae58b994cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S4sCwm0ojiQ5",
+        "outputId": "98b1efe3-da62-4624-a7b3-32ae58b994cd"
       },
       "id": "S4sCwm0ojiQ5",
       "execution_count": 50,
@@ -660,12 +670,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "WHTSeWMBb3Iz",
-        "outputId": "46fed75b-d896-4fac-e4be-6a4b5102b551",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
-        }
+        },
+        "id": "WHTSeWMBb3Iz",
+        "outputId": "46fed75b-d896-4fac-e4be-6a4b5102b551"
       },
       "id": "WHTSeWMBb3Iz",
       "execution_count": 71,
@@ -709,7 +719,8 @@
       "version": "3.x"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
