--- a/Assignments/05-Foundations/06-jupyter_shortcuts_and_productivity.ipynb
+++ b/Assignments/05-Foundations/06-jupyter_shortcuts_and_productivity.ipynb
@@ -2,9 +2,11 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "D4A7ZSGh9YUW"
+      },
       "source": [
-        "# \u26a1 06 - Jupyter Shortcuts and Productivity\n",
+        "# ⚡ 06 - Jupyter Shortcuts and Productivity\n",
         "\n",
         "Jupyter notebooks have **keyboard shortcuts and tricks** that make you faster.  \n",
         "In this notebook you will learn:\n",
@@ -12,121 +14,352 @@
         "- Essential keyboard shortcuts\n",
         "- Saving and exporting notebooks\n",
         "- Using `%history` and `%save`\n"
-      ]
+      ],
+      "id": "D4A7ZSGh9YUW"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ap2r2tPG9YUX"
+      },
       "source": [
         "## 1. Modes in Jupyter"
-      ]
+      ],
+      "id": "ap2r2tPG9YUX"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "6TYcUo1R9YUX"
+      },
       "source": [
+        "\n",
         "- **Edit mode** (green border, type in cell)\n",
         "- **Command mode** (blue border, issue commands on the notebook)\n",
         "\n",
         "Switch:\n",
-        "- Press `Enter` \u2192 Edit mode\n",
-        "- Press `Esc` \u2192 Command mode"
-      ]
+        "- Press `Enter` → Edit mode\n",
+        "- Press `Esc` → Command mode"
+      ],
+      "id": "6TYcUo1R9YUX"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "hwT5BmIc9YUX"
+      },
       "source": [
-        "\u2705 **Your Turn**: Try switching between Edit and Command mode and notice the border color."
+        "✅ **Your Turn**: Try switching between Edit and Command mode and notice the border color."
+      ],
+      "id": "hwT5BmIc9YUX"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%markdown\n",
+        "##These mode change commands/shortcuts work in jupyter, but not in colab apparently.\n"
+      ],
+      "metadata": {
+        "id": "_2lzQ9f19pBG",
+        "outputId": "7db47e0e-124b-4149-eff9-a4f65b1dd9ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 64
+        }
+      },
+      "id": "_2lzQ9f19pBG",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "##These mode change commands/shortcuts work in jupyter, but not in colab apparently.  \n"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "36-kovFN9YUY"
+      },
       "source": [
         "## 2. Common Shortcuts"
-      ]
+      ],
+      "id": "36-kovFN9YUY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "JokNWCfL9YUY"
+      },
       "source": [
-        "- `A` \u2192 Insert cell Above\n",
-        "- `B` \u2192 Insert cell Below\n",
-        "- `D D` \u2192 Delete a cell\n",
-        "- `M` \u2192 Change to Markdown cell\n",
-        "- `Y` \u2192 Change to Code cell\n",
-        "- `Shift + Enter` \u2192 Run cell and move to next\n",
-        "- `Ctrl + Enter` \u2192 Run cell, stay put\n",
-        "- `Alt + Enter` \u2192 Run cell and insert new one below"
-      ]
+        "- `A` → Insert cell Above\n",
+        "- `B` → Insert cell Below\n",
+        "- `D D` → Delete a cell\n",
+        "- `M` → Change to Markdown cell\n",
+        "- `Y` → Change to Code cell\n",
+        "- `Shift + Enter` → Run cell and move to next\n",
+        "- `Ctrl + Enter` → Run cell, stay put\n",
+        "- `Alt + Enter` → Run cell and insert new one below"
+      ],
+      "id": "JokNWCfL9YUY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Su6uMJk39YUY"
+      },
       "source": [
-        "\u2705 **Your Turn**: Practice creating, deleting, and changing cell types using only shortcuts."
+        "✅ **Your Turn**: Practice creating, deleting, and changing cell types using only shortcuts."
+      ],
+      "id": "Su6uMJk39YUY"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "%%markdown\n",
+        "# control + M M opens a text cell  or markdown cell\n",
+        "# contol + M Y returns cell to code cell\n"
+      ],
+      "metadata": {
+        "id": "se1ZDv5xEkja",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        },
+        "outputId": "4c771076-ac89-4897-d3bd-a0689e8c0f5c"
+      },
+      "id": "se1ZDv5xEkja",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "# control + M M opens a text cell  or markdown cell  \n# contol + M Y returns cell to code cell \n"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "%%markdown\n",
+        "# control + M A opens a new code cell above current cell position"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        },
+        "id": "leJagKEVFQfs",
+        "outputId": "b291b079-3200-49ce-d478-81681a5ce749"
+      },
+      "id": "leJagKEVFQfs",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "# control + M A opens a new code cell above current cell position\n"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%markdown\n",
+        "#control + M B opens a new code cell below current cell position"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        },
+        "id": "b2Du97giFIsx",
+        "outputId": "b6c43863-a41a-43d2-b690-4864ebffb9ad"
+      },
+      "id": "b2Du97giFIsx",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "#control + M B opens a new code cell below current cell position\n"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OXL7XwDwFXJh"
+      },
+      "id": "OXL7XwDwFXJh",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "j_Ll04eC9YUY"
+      },
       "source": [
         "## 3. Saving and Exporting"
-      ]
+      ],
+      "id": "j_Ll04eC9YUY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "6bApg5fb9YUY"
+      },
       "source": [
-        "- `Ctrl + S` (or `Cmd + S` on Mac) \u2192 Save notebook\n",
-        "- Menu: *File \u2192 Download as\u2026* \u2192 export to `.py`, `.html`, or `.pdf`\n",
+        "- `Ctrl + S` (or `Cmd + S` on Mac) → Save notebook\n",
+        "- Menu: *File → Download as…* → export to `.py`, `.html`, or `.pdf`\n",
         "- GitHub + Colab workflow: commit changes back to your repo directly"
-      ]
+      ],
+      "id": "6bApg5fb9YUY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "RO8BooqR9YUY"
+      },
       "source": [
-        "\u2705 **Your Turn**: Save this notebook, then try exporting to `.py` or `.html` from the File menu."
-      ]
+        "✅ **Your Turn**: Save this notebook, then try exporting to `.py` or `.html` from the File menu."
+      ],
+      "id": "RO8BooqR9YUY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Y7nj6JDp9YUZ"
+      },
       "source": [
         "## 4. History and Saving Code"
-      ]
+      ],
+      "id": "Y7nj6JDp9YUZ"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7XMicEXZ9YUZ",
+        "outputId": "fd753f52-c00c-48f2-cfe5-b2f8124d47f6"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   1: %history -n 1-5  # Show the first 5 commands in this session\n"
+          ]
+        }
+      ],
       "source": [
         "%history -n 1-5  # Show the first 5 commands in this session"
-      ]
+      ],
+      "id": "7XMicEXZ9YUZ"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQZiwD7r9YUa",
+        "outputId": "5d1cad10-3f71-434d-a005-e92e79c1e6e1"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The following commands were written to file `my_session.py`:\n",
+            "get_ipython().run_line_magic('history', '-n 1-5  # Show the first 5 commands in this session')\n",
+            "# Save history to a file\n",
+            "get_ipython().run_line_magic('save', 'my_session.py 1-5')\n"
+          ]
+        }
+      ],
       "source": [
         "# Save history to a file\n",
         "%save my_session.py 1-5"
-      ]
+      ],
+      "id": "hQZiwD7r9YUa"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "GfJhcVDj9YUa"
+      },
       "source": [
-        "\u2705 **Your Turn**: Use `%history` to view the last 10 commands you ran, then save them to `last10.py`."
+        "✅ **Your Turn**: Use `%history` to view the last 10 commands you ran, then save them to `last10.py`."
+      ],
+      "id": "GfJhcVDj9YUa"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# history command\n",
+        "%history"
+      ],
+      "metadata": {
+        "id": "Z1iAU1TpGP0q",
+        "outputId": "2ddf5c1d-9c7a-4c4c-ea40-724653f0c579",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Z1iAU1TpGP0q",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "%history -n 1-5  # Show the first 5 commands in this session\n",
+            "# Save history to a file\n",
+            "%save my_session.py 1-5\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "# history command\n",
+            "%history\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "9qrQlqLj9YUa"
+      },
       "source": [
         "---\n",
         "### Summary\n",
@@ -134,7 +367,8 @@
         "- Shortcuts make notebook use much faster.\n",
         "- You can export notebooks to share or turn them into scripts.\n",
         "- `%history` and `%save` help you capture your work.\n"
-      ]
+      ],
+      "id": "9qrQlqLj9YUa"
     }
   ],
   "metadata": {
@@ -146,6 +380,9 @@
     "language_info": {
       "name": "python",
       "version": "3.x"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
