--- a/Completed/05-Foundations/06-jupyter_shortcuts_and_productivity.ipynb
+++ b/Completed/05-Foundations/06-jupyter_shortcuts_and_productivity.ipynb
@@ -66,14 +66,31 @@
     {
       "cell_type": "code",
       "source": [
-        "These mode change commands/shortcuts work in jupyter, but not in colab apparently.\n"
+        "%%markdown\n",
+        "##These mode change commands/shortcuts work in jupyter, but not in colab apparently.\n"
       ],
       "metadata": {
-        "id": "_2lzQ9f19pBG"
+        "id": "_2lzQ9f19pBG",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 64
+        },
+        "outputId": "7db47e0e-124b-4149-eff9-a4f65b1dd9ec"
       },
       "id": "_2lzQ9f19pBG",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "##These mode change commands/shortcuts work in jupyter, but not in colab apparently.  \n"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,39 +132,91 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "%%markdown\n",
         "# control + M M opens a text cell  or markdown cell\n",
         "# contol + M Y returns cell to code cell\n"
       ],
       "metadata": {
-        "id": "se1ZDv5xEkja"
+        "id": "se1ZDv5xEkja",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        },
+        "outputId": "4c771076-ac89-4897-d3bd-a0689e8c0f5c"
       },
       "id": "se1ZDv5xEkja",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "# control + M M opens a text cell  or markdown cell  \n# contol + M Y returns cell to code cell \n"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
+        "%%markdown\n",
         "# control + M A opens a new code cell above current cell position"
       ],
       "metadata": {
-        "id": "leJagKEVFQfs"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        },
+        "id": "leJagKEVFQfs",
+        "outputId": "b291b079-3200-49ce-d478-81681a5ce749"
       },
       "id": "leJagKEVFQfs",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "# control + M A opens a new code cell above current cell position\n"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
+        "%%markdown\n",
         "#control + M B opens a new code cell below current cell position"
       ],
       "metadata": {
-        "id": "b2Du97giFIsx"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        },
+        "id": "b2Du97giFIsx",
+        "outputId": "b6c43863-a41a-43d2-b690-4864ebffb9ad"
       },
       "id": "b2Du97giFIsx",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "#control + M B opens a new code cell below current cell position\n"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -203,11 +272,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "7XMicEXZ9YUZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7XMicEXZ9YUZ",
+        "outputId": "fd753f52-c00c-48f2-cfe5-b2f8124d47f6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   1: %history -n 1-5  # Show the first 5 commands in this session\n"
+          ]
+        }
+      ],
       "source": [
         "%history -n 1-5  # Show the first 5 commands in this session"
       ],
@@ -215,11 +296,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "hQZiwD7r9YUa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQZiwD7r9YUa",
+        "outputId": "5d1cad10-3f71-434d-a005-e92e79c1e6e1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The following commands were written to file `my_session.py`:\n",
+            "get_ipython().run_line_magic('history', '-n 1-5  # Show the first 5 commands in this session')\n",
+            "# Save history to a file\n",
+            "get_ipython().run_line_magic('save', 'my_session.py 1-5')\n"
+          ]
+        }
+      ],
       "source": [
         "# Save history to a file\n",
         "%save my_session.py 1-5"
@@ -235,6 +331,177 @@
         "✅ **Your Turn**: Use `%history` to view the last 10 commands you ran, then save them to `last10.py`."
       ],
       "id": "GfJhcVDj9YUa"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# history command\n",
+        "%history -n\n",
+        "\n",
+        "\n",
+        "#%save last10.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z1iAU1TpGP0q",
+        "outputId": "a90457e1-c24a-4d3e-88c2-ea0c315a9581"
+      },
+      "id": "Z1iAU1TpGP0q",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   1: %history -n 1-5  # Show the first 5 commands in this session\n",
+            "   2:\n",
+            "# Save history to a file\n",
+            "%save my_session.py 1-5\n",
+            "   3:\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "   4:\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "   5:\n",
+            "# history command\n",
+            "%history\n",
+            "   6:\n",
+            "%%markdown\n",
+            "#control + M B opens a new code cell below current cell position\n",
+            "   7:\n",
+            "%%markdown\n",
+            "# control + M A opens a new code cell above current cell position\n",
+            "   8:\n",
+            "\n",
+            "%%markdown\n",
+            "# control + M M opens a text cell  or markdown cell  \n",
+            "# contol + M Y returns cell to code cell\n",
+            "   9:\n",
+            "%%markdown\n",
+            "##These mode change commands/shortcuts work in jupyter, but not in colab apparently.\n",
+            "  10:\n",
+            "# history command\n",
+            "%history\n",
+            "  11:\n",
+            "# history command\n",
+            "%history \n",
+            "\n",
+            "%save last10.py\n",
+            "  12:\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "\n",
+            "#%save last10.py\n",
+            "  13:\n",
+            "# history command\n",
+            "%history -n -10\n",
+            "\n",
+            "#%save last10.py\n",
+            "  14:\n",
+            "# history command\n",
+            "%history -n -10:\n",
+            "\n",
+            "#%save last10.py\n",
+            "  15:\n",
+            "# history command\n",
+            "%history -10\n",
+            "\n",
+            "#%save last10.py\n",
+            "  16:\n",
+            "# history command\n",
+            "%history \n",
+            "\n",
+            "#%save last10.py\n",
+            "  17:\n",
+            "# history command\n",
+            "%history -10:\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  18:\n",
+            "# history command\n",
+            "%history 10:\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  19:\n",
+            "# history command\n",
+            "%history -n :-10\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  20:\n",
+            "# history command\n",
+            "%history -n :-10\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  21:\n",
+            "# history command\n",
+            "%history -n :10\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  22:\n",
+            "# history command\n",
+            "%history -n 10\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  23:\n",
+            "# history command\n",
+            "%history -n 10\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  24:\n",
+            "# history command\n",
+            "%history -n 20\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  25:\n",
+            "# history command\n",
+            "%history -n 30\n",
+            "\n",
+            "\n",
+            "#%save last10.py\n",
+            "  26:\n",
+            "# history command\n",
+            "%history -n \n",
+            "\n",
+            "\n",
+            "#%save last10.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%save last10.py"
+      ],
+      "metadata": {
+        "id": "97KuvginHdPS",
+        "outputId": "8e5bbeb4-9c54-482b-d840-5c3bab353594",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "97KuvginHdPS",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "'' was not found in history, as a file, url, nor in the user namespace.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
